<resources>
    <string name="app_name">Terminal</string>

    <string name="nav_header_version">3.0.7</string>

    <string name="nav_header_title">Terminal</string>
    <string name="nav_header_subtitle">v. 1.0.0</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_header_desc">Заголовок</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_acceptance">Приемка</string>
    <string name="menu_moving">Перемещение</string>
    <string name="menu_order_outfit">Заказ-наряд</string>
    <string name="menu_issue">Выдача</string>

    <string name="moving">Переместить авто</string>
    <string name="password_form_header">Ваш логин/пароль...</string>
    <string name="login">логин</string>
    <string name="password">пароль</string>
    <string name="butt_OK">OK</string>
    <string name="butt_Yes">Да</string>
    <string name="butt_Not">Нет</string>
    <string name="success">Все ОК</string>
    <string name="error">Доступ запрещен!</string>
    <string name="textNoInternet">Пропала связь с сервером!</string>
    <string name="unknownError">Неизвестная ошибка!</string>
    <string name="errorConnection">"Ошибка: "</string>
    <string name="error_login">Не заполнен логин</string>
    <string name="error_password">Не заполнен пароль</string>
    <string name="error_not_completed">Не заполнено</string>
    <string name="passwordIncorrect">"Доброе время суток! "</string>
    <string name="passwordNotIncorrect">Неверно введен пароль!</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="textDate">Дата:</string>
    <string name="textSector">Сектор:</string>
    <string name="textRow">ряд:</string>
    <string name="textBarcode">Штрих код:</string>
    <string name="edit">Данные по авто</string>
    <string name="saveCB">Записать ЦБ</string>
    <string name="searchBarCode">Найти по штрихкоду</string>
    <string name="camera_to_the_barcode">Наведите камеру на штрихкод</string>
    <string name="turn_off_flashlight">Выключить фонарик</string>
    <string name="turn_on_flashlight">Включить фонарик</string>
    <string name="no_car_by_barcode">По штрихкоду %s нет машины в этом списке</string>
    <string name="update_new_version">Доступно обновление приложения Terminal до версии %s - желаете обновиться?
        Если вы согласны - вы будете перенаправлены к скачиванию APK файла, который затем нужно будет открыть.</string>
    <string name="cancelled_scan">Ошибка поиска</string>
    <string name="cancel">Отмена</string>
    <string name="scan_more">Отсканировать еще раз</string>
    <string name="exit">Нажмите еще раз чтобы выйти</string>
    <string name="wait_update">Получение данных</string>
    <string name="wait_sending">Отправка данных</string>
    <string name="wait_send_status">Отправка данных по статусу</string>
    <string name="wait">В обработке</string>
    <string name="wait_ftp">Подключение к FTP</string>
    <string name="send_ftp">"Запись фото %d из %d"</string>
    <string name="send_ftp_menu">"Записать фото на FTP"</string>
    <string name="ok_ftp">"Фото отправлены"</string>
    <string name="error_ftp">"Ошибка отправки фото на FTP, попробуйте позже. Если ошибка останется, обратитесь к администратору"</string>
    <string name="select_auto">Выбор автомобиля:</string>
    <string name="add_moving">создайте перемещение</string>
    <string name="issuance_car">Выдать авто</string>
    <string name="textDriver">Водитель</string>
    <string name="textAutoNumber">Номер автовоза</string>
    <string name="settings">Настройки</string>
    <string name="Server">Сервер</string>
    <string name="scaner">Сканер</string>
    <string name="lost_for_internet">потеряно интернет-соединение...</string>
    <string name="no_internet">отсутствует подключение к интернету! операция не возможна</string>
    <string name="connection_for_internet">интернет-соединение восстановлено</string>
    <string name="operation">Операции</string>
    <string name="photo">Фото</string>
    <string name="send_photo">Отправить фото?</string>
    <string name="download_photo">Есть фото к этому авто, скачать?</string>
    <string name="send_photo_error">Не все фотографии сделаны по операциям!</string>
    <string name="completed_outfit">По Заказ-наряду будут отправлены фотографии и отметка о выполении. Продолжить?</string>
    <string name="view_photo">Фото</string>
    <string name="act_inspection">Акт осмотра</string>
    <string name="menu_act_inspection">Акты осмотра</string>
    <string name="text_form">Вид акта осмотра:</string>
    <string name="text_date_plan">Дата осмотра план:</string>
    <string name="state_text">Статус:</string>
    <string name="text_info">Инфо</string>
    <string name="text_inspection">Осмотр</string>
    <string name="text_photo">Фото</string>
    <string name="text_complete">Комплектация</string>
    <string name="text_damage">Повреждения</string>
    <string name="text_general_form">Общий вид</string>
    <string name="text_other">Другое</string>
    <string name="text_salon">Салон</string>
    <string name="text_gaskets">Уплотнители</string>

    <string name="part">Запчасть</string>
    <string name="select_part">Выбрать запчасть</string>

    <string name="types_damage">Тип повреждения</string>
    <string name="select_types_damage">Выбрать тип повреждения</string>

    <string name="degrees_damage">Степень повреждения</string>
    <string name="select_degrees_damage">Выбрать степень повреждения</string>

    <string name="classification_damage">Класификация</string>
    <string name="select_classification_damage">Выбрать класификацию</string>

    <string name="detail_damage">Детали степени повреждения</string>

    <string name="origin_damage">Происхождение</string>
    <string name="select_origin_damage">Выбрать происхождение</string>

    <string name="width">Ширина (мм)</string>
    <string name="height">Высота (мм)</string>

    <string name="comment">Комментарий</string>

    <string name="select_detail">Деталь</string>
    <string name="select_defect">Выбрать дефект</string>

    <string name="add_detail_damage">Деталь повреждение</string>
    <string name="add_defect_damage">Дефект повреждение</string>

    <string name="defect">Дефект</string>
    <string name="performed">Выполнено</string>
    <string name="run">Пробег</string>
    <string name="send_performed">Выполнить Акт осмотра?</string>
    <!--    <string name="add_photo">делаем следующую фото или вторую фото той же части?</string>-->
    <string name="add_photo">новое фото</string>
    <string name="all_photos_added">Все фото добавлены. если нужно, можно начать сначала</string>
    <string name="butt_next">дальше</string>
    <string name="butt_more_photos">еще фото</string>
    <string name="no_photos">Запрещено закрыть акт осмотра без обязательных фотографий</string>
    <string name="not_completed">Запрещено закрыть акт осмотра без заполнения обязательных полей: Штрих код, Дата</string>
    <string name="update_data">Загрузить данные</string>

    <string name="save_act">Акт записан для отправки</string>
    <string name="send_act">Отправить Акты</string>
    <string name="download_act">Загрузить приемку? Если Акт выполнен в ЦБ, он удалится в мобильном приложении. продолжить?</string>
    <string name="download_act_2">Загрузить акты? Если Акт выполнен в ЦБ, он удалится в мобильном приложении. продолжить?</string>
    <string name="password_failed">доступ запрещен</string>
    <string name="message_title">Есть новые акты</string>
    <string name="background_ex_change_of_acts">фоновый обмен актами</string>
    <string name="button_send_db">Отправить базу данных</string>

</resources>
