<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <!--android:icon="@android:drawable/stat_sys_download_done"-->
    <item
        android:id="@+id/update_data_receptions"
        android:icon="@drawable/download"
        android:title="@string/update_data"
        app:showAsAction="always" />

    <!--    android:icon="@android:drawable/stat_sys_upload_done"-->
    <item
        android:id="@+id/send_act"
        android:icon="@drawable/upload"
        android:title="@string/send_act"
        app:showAsAction="always" />
</menu>