<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Password">

    <TextView
        android:id="@+id/password_form_header"
        android:layout_width="251dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/password_form_header"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_form_header">

        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:id="@+id/login"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:layout_marginTop="44dp"-->
        <!--            android:hint="@string/login"/>-->

        <AutoCompleteTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:inputType="textPersonName">

        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/imBiometric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/butt_OK"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="80dp"
        android:text="@string/butt_OK"
        app:layout_constraintBottom_toBottomOf="@+id/imBiometric"
        app:layout_constraintEnd_toStartOf="@+id/imBiometric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imBiometric"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imBiometric"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="417dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butt_OK"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        android:src="@drawable/ic_baseline_fingerprint_24" />


</androidx.constraintlayout.widget.ConstraintLayout>