<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCancel"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageOk"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_done"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="TMAJ3813DKJ882739, TUCSON," />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barcodeGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textBarcode"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textBarcode"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/barCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            tools:text="2000000588964" />

        <ImageButton
            android:id="@+id/scanBarCode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_barcode" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textDate"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/ic_calendar"
            android:inputType="date"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectorGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSector"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textSector"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/editSector"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textRow"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/textRow"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:inputType="numberSigned"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>