<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CarActivityIssuance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCancel"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/issuance_car"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageOk"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_done"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="№ 22222 от 30.20.2000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="TMAJ3813DKJ882739, TUCSON," />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/driverGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:text="@string/textDriver"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDriver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Иван Иванович" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/autoNumberGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:text="@string/textAutoNumber"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAutoNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="AA 12312" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectorGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="right|center"
            android:text="@string/textSector"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editSector"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="E" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="right|center"
            android:text="@string/textRow"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1" />

    </LinearLayout>


</LinearLayout>