<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DamageDefectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/defect" />

                <AutoCompleteTextView
                    android:id="@+id/itemDefect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/select_defect" />

                <ImageView
                    android:id="@+id/imageDefect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/itemDefect"
                    android:layout_alignRight="@id/itemDefect"
                    android:layout_alignBottom="@id/itemDefect"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/commentInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine">

                    </AutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_type_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:clickable="true"
                    android:scrollbars="vertical" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>